--- a/Light.uproject
+++ b/Light.uproject
@@ -6,7 +6,7 @@
 	"Plugins": [
 		{
 			"Name": "PathFollow",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/7c19d00ad42a4b67972eea383dedb7f3"
 		}
 	]
