更改为手柄来拾取放下道具

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -38,10 +38,11 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=True
 DefaultViewportMouseLockMode=LockOnCapture
-+ActionMappings=(ActionName="GetThings",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="PutThings",Key=S,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GetProps/drop",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GetProps/drop",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="TurnLeft",Key=A,Scale=1.000000)
 +AxisMappings=(AxisName="TurnLeft",Key=D,Scale=-1.000000)
++AxisMappings=(AxisName="MoveLeft",Key=Gamepad_RightX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
