正在修改玩家的移动

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,7 +42,14 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="GetProps/drop",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="TurnLeft",Key=A,Scale=1.000000)
 +AxisMappings=(AxisName="TurnLeft",Key=D,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveLeft",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=MotionController_Left_Thumbstick,Scale=1.000000)
++AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
