--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -40,6 +40,7 @@ bDefaultViewportMouseLock=True
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="GetProps/drop",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="GetProps/drop",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Chisel",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="TurnLeft",Key=A,Scale=1.000000)
 +AxisMappings=(AxisName="TurnLeft",Key=D,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
