--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -41,8 +41,6 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="GetProps/drop",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="GetProps/drop",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Chisel",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+AxisMappings=(AxisName="TurnLeft",Key=A,Scale=1.000000)
-+AxisMappings=(AxisName="TurnLeft",Key=D,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
@@ -52,6 +50,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="MoveForward",Key=MotionController_Left_Thumbstick,Scale=1.000000)
 +AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="LookUpRate",Key=Gamepad_RightY,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
++AxisMappings=(AxisName="MoveMirror",Key=Gamepad_LeftTrigger,Scale=1.000000)
++AxisMappings=(AxisName="MoveMirror",Key=Gamepad_RightTrigger,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
