凿墙的逻辑ok

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -51,8 +51,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="LookUpRate",Key=Gamepad_RightY,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
-+AxisMappings=(AxisName="MoveMirror",Key=Gamepad_LeftTrigger,Scale=1.000000)
-+AxisMappings=(AxisName="MoveMirror",Key=Gamepad_RightTrigger,Scale=-1.000000)
++AxisMappings=(AxisName="RotateMirror",Key=Gamepad_LeftTrigger,Scale=1.000000)
++AxisMappings=(AxisName="RotateMirror",Key=Gamepad_RightTrigger,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
